# faster_unicode_symbol_search

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  info.plist  makefile.toml
benches/: my_benchmark.rs
src/: build.rs  lib.rs  main.rs  search.rs  symbols.rs
