[package]
name = "faster_unicode_symbol_search"
version = "0.1.0"
authors = ["Nickolas Fotopoulos <nickolas.fotopoulos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "~1"
bstr = "~1.9"
itertools = "~0.13"
rayon = "~1.10"
serde = { version= "~1", features = ["derive"] }

[dev-dependencies]
criterion = "~0.5"

[build-dependencies]
bincode = "~1"
serde = { version= "~1", features = ["derive"] }

[[bin]]
name = "fuss"
path = "src/bin/main.rs"

[[bench]]
name = "my_benchmark"
harness = false
